<resources>
    <string name="app_name">Chingari Assignment</string>
    <string name="no_internet_available">Internet not available!!</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sea_level">Sea Level</string>
    <string name="forecast">Forecast</string>

</resources>